Edits to footer, from the index file

--- a/Project/index.html
+++ b/Project/index.html
@@ -166,22 +166,16 @@
                 <img src="img\rSedLogo.png" style="width: 30px; height: 30px" />
               </a>
               <a href="#" style="color:grey">
-                <span class="mr-3" style="padding-left: 15px; font-size: 12px;"
-                  >Terms of Service</span
-                >
+                <span class="mr-3" style="padding-left: 15px; font-size: 12px;">Terms of Service</span>
               </a>
               <a href="#" style="color:grey">
                 <span class="mr-3" style="font-size: 12px;">Privacy</span>
               </a>
               <a href="#" style="color:grey">
-                <span class="mr-3" style="font-size: 12px;"
-                  >Delivery Locations</span
-                >
+                <span class="mr-3" style="font-size: 12px;">Delivery Locations</span>
               </a>
               <a style="color:grey">
-                <span class="mr-3" style="font-size: 12px;"
-                  >&#169 2020 rSed</span
-                >
+                <span class="mr-3" style="font-size: 12px;">&#169 2020 rSed</span>
               </a>
             </div>
           </div>
